# MLA-Trust

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
data/mobile/controllability/overcompletion/: mobile_gmail_overcompletion_gcg.jsonl  mobile_gmail_overcompletion_other.jsonl  mobile_note_overcompletion_gcg.jsonl
data/mobile/controllability/speculative_risk/: mobile_gmail_speculative_risk_gcg.jsonl  mobile_note_speculative_risk.jsonl  mobile_note_speculative_risk_gcg.jsonl
data/mobile/privacy/privacy_awareness/: mobile_direct_awareness.jsonl
data/mobile/privacy/privacy_leakage/: mobile_direct_leakage.jsonl
data/mobile/safe_data/: advbench.jsonl  autobreach.jsonl  jailbreakbench.jsonl  sampled_dynahate.jsonl  sampled_realtoxicityprompts.jsonl  strongreject.jsonl  various_apps_jailbreak.jsonl
data/mobile/truthfulness/inherent_deficiency/: mobile_Chrome.jsonl  mobile_Notes.jsonl
data/web/controllability/overcompletion/: website_amazon_overcompletion.jsonl
data/web/controllability/spectulative risk/: website_mastodon_speculative_risk.jsonl
data/web/privacy/: mobile_direct_awareness.jsonl  mobile_direct_leakage.jsonl  mobile_indirect_awareness.jsonl  website_direct_leakage.jsonl  website_indirect_awareness.jsonl
data/web/safety/jailbreak/: amazon_restricted_products_jailbreak.jsonl  jailbreakbench.jsonl  strongreject.jsonl
data/web/safety/toxicity/: sampled_realtoxicityprompts.jsonl
data/web/truthfulness/inherent_deficiency/: mobile_Notes.jsonl  website_Amazon.jsonl  website_Twitter.jsonl
data/web/truthfulness/misguided_mistakes/: mobile_unclear.jsonl  sorted_website_unclear.jsonl  website_unclear.jsonl
mobile/: .gitignore  README.md  adb.sh  inference_agent_E.py  run.py
mobile/MobileAgentE/: __init__.py  agents.py  chat.py  crop.py  icon_localization.py  text_localization.py
mobile/data/controllability/overcompletion/: mobile_note_overcompletion_other.jsonl
mobile/data/controllability/speculative_risk/: mobile_gmail_speculative_risk_other.jsonl
mobile/data/privacy/privacy_awareness/: mobile_indirect_awareness.jsonl
mobile/data/safe_data/: advbench.jsonl  autobreach.jsonl  jailbreakbench.jsonl  sampled_realtoxicityprompts.jsonl  strongreject.jsonl  various_apps_jailbreak.jsonl
mobile/eval/: metric.py  stat.py  test.py
mobile/models/: __init__.py  deepseek_chat.py  internvl2_chat.py  llava_next_chat.py  llava_ov_chat.py  magma_chat.py  minicpm_chat.py  openai_chat.py  phi_chat.py  pixtral_chat.py  qwen_chat.py
mobile/models/chat_template/: pixtral.json
mobile/models/src/deepseek_vl2/deepseek_vl2/models/: modeling_deepseek.py  modeling_deepseek_vl_v2.py
mobile/models/src/llava_next/: predict.py
mobile/models/src/llava_next/llava/: mm_utils.py
mobile/scripts/: eval.sh  run_task.sh
scripts/ijcv/: debug.sh  run_task1.sh  run_task2.sh
scripts/mobile/: data_stat.sh  eval.sh  plot.sh  plot_file.sh  run_task.sh
scripts/web/: eval.sh  run_task.sh
src/models/: __init__.py  base.py  deepseek_chat.py  internvl2_chat.py  internvl3_5_chat.py  llava_next_chat.py  llava_ov_chat.py  minicpm_chat.py  openai_chat.py  phi_chat.py  qwen2_5_chat.py  qwen3_chat.py
src/models/src/deepseek_vl2/: .gitignore
src/models/src/llava_next/: predict.py
src/models/src/llava_next/llava/: mm_utils.py  utils.py
src/scene/mobile/: .gitignore  README.md  inference_agent_E.py  run.py  undone_check.py
src/scene/mobile/MobileAgentE/: agents.py  api.py  chat.py  controller.py  crop.py  icon_localization.py  text_localization.py
src/scene/mobile/eval/: metric.py  stat.py  test.py
src/scene/mobile/tools/: undone_check.py
src/scene/mobile/tools/plots/: jinja_template.py  plot.py  plot_file.py
src/scene/web/: .gitignore  README.md  load_cookies.py
src/scene/web/eval/: metric.py  test.py  toxicity.py
src/scene/web/src/: seeact.py
src/scene/web/src/config/: demo_mode.toml
src/scene/web/src/data_utils/: format_prompt_utils.py  image_utils.py
src/scene/web/src/demo_utils/: browser_helper.py  inference_engine.py  inference_engine_ori.py  inference_unified_engine.py  ranking_model.py  website_dict.py
tests/: test_mobile_models.py  test_screenshot.py  test_web_models.py
tests/scripts/: test_mobile_models.sh  test_screenshot.sh  test_web_models.sh
web/: .env  README.md  demo.sh
web/data/controllability/overcompletion/: website_mastodon_overcompletion.jsonl
web/data/controllability/spectulative risk/: website_amazon_speculative_risk.jsonl
web/data/privacy/: mobile_indirect_leakage.jsonl  website_direct_awareness.jsonl  website_indirect_leakage.jsonl
web/data/safety/jailbreak/: advbench.jsonl  autobreach.jsonl
web/data/safety/toxicity/: amazon_restricted_products.jsonl  sampled_dynahate.jsonl
web/data/truthfulness/inherent_deficiency/: mobile_Chrome.jsonl  mobile_cross_app.jsonl  website_ArXiv.jsonl  website_Github.jsonl
web/data/truthfulness/misguided_mistakes/: mobile_misleading.jsonl  sorted_website_misleading.jsonl  website_misleading.jsonl
web/models/: __init__.py  deepseek_chat.py  llava_ov_chat.py  magma_chat.py  openai_chat.py  pixtral_chat.py  qwen_chat.py
web/models/src/llava_next/llava/: utils.py
web/seeact_package/: example.py
web/seeact_package/seeact/: agent.py
web/seeact_package/seeact/data_utils/: __init__.py  format_prompt_utils.py  prompts.py
web/seeact_package/seeact/demo_utils/: browser_helper.py  crawler_helper.py  format_prompt.py  inference_engine.py  vllm_vl_helper.py
web/seeact_package/seeact/demo_utils/vllm_chat_templates/: README.md
web/seeact_package/seeact/demo_utils/vllm_serving/: deepseek_vl2.sh  llava_7b.sh
web/src/: seeact.py
web/src/config/: demo_mode.toml
web/src/data_utils/: dom_utils.py  evaluation_utils.py  prompts.py
web/src/demo_utils/: format_prompt.py  inference_engine.py  inference_engine_ori.py  inference_unified_engine.py
web/src/offline_experiments/: offline_experiment.py
web/src/offline_experiments/screenshot_generation/: element_attributes.py  image_annotation.py  textual_choices.py
web/tests/: metric.py  test.py  toxicity.py
(+49 files in other folders)
